# advent-of-code-2023

./: README.md  flake.nix  pyproject.toml  shell.nix
src/aoc2023/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day13_old.py  day14.py  day15.py  day16.py
tests/: day01_test.py  day02_test.py  day03_test.py  day04_test.py  day05_test.py  day06_test.py  day07_test.py  day08_test.py  day09_test.py  day10_test.py  day11_test.py  day12_test.py  day13_test.py  day14_test.py  day15_test.py  day16_test.py  day17_test.py  dayXX_test.py
