[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Kornel Jahn <kjahn.public@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc2023", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
